--- a/apt_package_install.yml
+++ b/apt_package_install.yml
@@ -2,7 +2,7 @@
   hosts: linux
   vars:
     ansible_user: azureadmin
-    ansible_ssh_private_key_file: tmp/id_ssh_rsa
+    ansible_ssh_private_key_file: /tmp/id_ssh_rsa
     host_key_checking: false
   tasks:
   - name: Install common packages
